# redirect_serv

./: .gitignore  .pre-commit-config.yaml  Makefile  env.example  pyproject.toml
src/redirect_serv/: main.py
src/redirect_serv/api/: __init__.py  health.py  qr_code.py  router.py
src/redirect_serv/apps/company/models/: __init__.py  company.py  company_branch.py
src/redirect_serv/apps/qr_manager/: application.py
src/redirect_serv/apps/qr_manager/models/: __init__.py  qr_code.py
src/redirect_serv/apps/qr_manager/repositories/: __init__.py  qr_code_repository.py
src/redirect_serv/apps/qr_manager/services/: __init__.py  qr_code_service.py
src/redirect_serv/core/: app.py  config.py  exceptions.py  handlers.py
src/redirect_serv/core/dependencies/: __init__.py  database.py  service_dependencies.py
src/redirect_serv/core/repositories/: base_repository.py
src/redirect_serv/models/: __init__.py  base.py  mixins.py
tests/: conftest.py
tests/apps/qr_manager/: conftest.py  test_qr_code_router.py  test_qr_code_service.py
tests/fixtures/: companies.py  factories.py
