[project]
name = "redirect-serv"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.13.*"
fastapi = "^0.121.1"
pydantic = "^2.12.4"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
asyncio = "^4.0.0"
python-dotenv = "^1.2.1"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pre-commit = ">=4.4.0,<5.0.0"
isort = "^7.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
flake8 = "^7.3.0"
bandit = "^1.8.6"
mypy = "^1.18.2"
pylint = "^4.0.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
